deploy/manifests/cm2http-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cm2http-system
  labels: 
    app: cm2http
spec: {}
status: {}
