deploy/manifests/cm2http-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cm2http
  name: cm2http
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cm2http
  strategy: {}
  template:
    metadata:
      labels:
        app: cm2http
    spec:
      serviceAccountName: cm2http
      securityContext:
        runAsUser: 1900
        runAsGroup: 1900
      containers:
      - name: cm2http
        image: thewebroot/cm2http:v0.0.1
        command:
          - /cm2http
        args:
          - "--configmap-namespace=$(CM2HTTP_NAMESPACE_NAME)"
        ports:
          - containerPort: 5555
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
        livenessProbe:
          httpGet:
            scheme: HTTP
            port: 5555
            path: /healthz
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            scheme: HTTP
            port: 5555
            path: /readyz
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 50m
            memory: 128Mi
status: {}
