deploy/manifests/cm2http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cm2http
  name: cm2http
spec:
  ports:
  - name: "http"
    port: 80
    protocol: TCP
    targetPort: 5555
  selector:
    app: cm2http
  type: ClusterIP
status:
  loadBalancer: {}
