deploy/manifests/cm2http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cm2http
  labels:
    app: cm2http
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "std-ingress-class"
spec:
  rules:
  - host: cluster-info.test-cluster1.example.com
    http:
      paths:
      - backend:
          service:
            name: cm2http
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - cluster-info.test-cluster1.example.com
